@@ -5,10 +5,6 @@
  * Access RPM indices using Berkeley db-2.x API.
  */
 
-#define	RET_ERROR	1
-#define	RET_SUCCESS	0
-#define	RET_SPECIAL	-1
-
 #ifdef __cplusplus
 extern "C" {
 #endif
